crates/iota-e2e-tests/tests/snapshots/snapshot_tests__body_fn.snap
---
source: crates/iota-e2e-tests/tests/snapshot_tests.rs
assertion_line: 75
expression: "run_one(cmds, context).await?"
---
[
  "iota client objects {ME}",
  [
    {
      "data": {
        "objectId": "0x5b0e7d31f9c3a421f94dae3511983a2be67e04a7071171da2380f82be103239f",
        "version": "1",
        "digest": "Ge8nDvU9KCKDfmZqpFwt7omFDKYxfGrGUJ8qc4Gna1Uc",
        "type": "0x2::coin::Coin<0x2::iota::IOTA>",
        "owner": {
          "AddressOwner": "0x2868fed4dbeb23d2ace3ee3ad6e39061423c5692a2b289b39c643c0baf2d8d85"
        },
        "previousTransaction": "iRCtWGJaBCVJyQ87kZZEubgBY69ZFnYXfCznyjs4Avb",
        "storageRebate": "0",
        "content": {
          "dataType": "moveObject",
          "type": "0x2::coin::Coin<0x2::iota::IOTA>",
          "hasPublicTransfer": true,
          "fields": {
            "balance": "30000000000000000",
            "id": {
              "id": "0x5b0e7d31f9c3a421f94dae3511983a2be67e04a7071171da2380f82be103239f"
            }
          }
        }
      }
    },
    {
      "data": {
        "objectId": "0x5ee269cea868091ea1c5da5f15581c2f7b1708413b3bdda3e4c9528f2b3a5bb9",
        "version": "1",
        "digest": "7d8gTJskkPoVPFoFsTFLb5JvyY26cuiW9UNkVrnP5Hk8",
        "type": "0x2::coin::Coin<0x2::iota::IOTA>",
        "owner": {
          "AddressOwner": "0x2868fed4dbeb23d2ace3ee3ad6e39061423c5692a2b289b39c643c0baf2d8d85"
        },
        "previousTransaction": "iRCtWGJaBCVJyQ87kZZEubgBY69ZFnYXfCznyjs4Avb",
        "storageRebate": "0",
        "content": {
          "dataType": "moveObject",
          "type": "0x2::coin::Coin<0x2::iota::IOTA>",
          "hasPublicTransfer": true,
          "fields": {
            "balance": "30000000000000000",
            "id": {
              "id": "0x5ee269cea868091ea1c5da5f15581c2f7b1708413b3bdda3e4c9528f2b3a5bb9"
            }
          }
        }
      }
    },
    {
      "data": {
        "objectId": "0x759bb64d0a576b00a8aae6d439da4a72ef7d8797282c90211bab2bc723cd48e5",
        "version": "1",
        "digest": "DXLS4WoauDJ8yKdX1iuxbZjhm5KB7FwqoxQ5jZjQhz9J",
        "type": "0x2::coin::Coin<0x2::iota::IOTA>",
        "owner": {
          "AddressOwner": "0x2868fed4dbeb23d2ace3ee3ad6e39061423c5692a2b289b39c643c0baf2d8d85"
        },
        "previousTransaction": "iRCtWGJaBCVJyQ87kZZEubgBY69ZFnYXfCznyjs4Avb",
        "storageRebate": "0",
        "content": {
          "dataType": "moveObject",
          "type": "0x2::coin::Coin<0x2::iota::IOTA>",
          "hasPublicTransfer": true,
          "fields": {
            "balance": "30000000000000000",
            "id": {
              "id": "0x759bb64d0a576b00a8aae6d439da4a72ef7d8797282c90211bab2bc723cd48e5"
            }
          }
        }
      }
    },
    {
      "data": {
        "objectId": "0xa010e1486bfd2f1d7c57a3b2c2edd369e64e8fddc1ca17667314317273cb491d",
        "version": "1",
        "digest": "2oNVEnNehMmtkvC5vAYghCj7K7DtUrsjA65HgSbU4fbE",
        "type": "0x2::coin::Coin<0x2::iota::IOTA>",
        "owner": {
          "AddressOwner": "0x2868fed4dbeb23d2ace3ee3ad6e39061423c5692a2b289b39c643c0baf2d8d85"
        },
        "previousTransaction": "iRCtWGJaBCVJyQ87kZZEubgBY69ZFnYXfCznyjs4Avb",
        "storageRebate": "0",
        "content": {
          "dataType": "moveObject",
          "type": "0x2::coin::Coin<0x2::iota::IOTA>",
          "hasPublicTransfer": true,
          "fields": {
            "balance": "30000000000000000",
            "id": {
              "id": "0xa010e1486bfd2f1d7c57a3b2c2edd369e64e8fddc1ca17667314317273cb491d"
            }
          }
        }
      }
    },
    {
      "data": {
        "objectId": "0xb279227ad10111e5d870facc26d048a05bc440859e718cde0e3bbf257765544c",
        "version": "1",
        "digest": "GCtoreW1XPSS2bmKxy5aNaFRD1ieK37aXH9Wd8rFoqph",
        "type": "0x2::coin::Coin<0x2::iota::IOTA>",
        "owner": {
          "AddressOwner": "0x2868fed4dbeb23d2ace3ee3ad6e39061423c5692a2b289b39c643c0baf2d8d85"
        },
        "previousTransaction": "iRCtWGJaBCVJyQ87kZZEubgBY69ZFnYXfCznyjs4Avb",
        "storageRebate": "0",
        "content": {
          "dataType": "moveObject",
          "type": "0x2::coin::Coin<0x2::iota::IOTA>",
          "hasPublicTransfer": true,
          "fields": {
            "balance": "30000000000000000",
            "id": {
              "id": "0xb279227ad10111e5d870facc26d048a05bc440859e718cde0e3bbf257765544c"
            }
          }
        }
      }
    }
  ],
  "iota client objects 0x0000000000000000000000000000000000000000000000000000000000000000",
  [],
  "iota client object 0x5",
  [
    {
      "data": {
        "objectId": "0x0000000000000000000000000000000000000000000000000000000000000005",
        "version": "1",
        "digest": "EVMF5DELWDiDckUy2J5u8UyfctyFYFPrM9hdqGeVxRLq",
        "type": "0x3::iota_system::IotaSystemState",
        "owner": {
          "Shared": {
            "initial_shared_version": 1
          }
        },
        "previousTransaction": "iRCtWGJaBCVJyQ87kZZEubgBY69ZFnYXfCznyjs4Avb",
        "storageRebate": "0",
        "content": {
          "dataType": "moveObject",
          "type": "0x3::iota_system::IotaSystemState",
          "hasPublicTransfer": false,
          "fields": {
            "id": {
              "id": "0x0000000000000000000000000000000000000000000000000000000000000005"
            },
            "version": "1"
          }
        }
      }
    }
  ],
  "iota client object 0x5 --bcs",
  [
    {
      "data": {
        "objectId": "0x0000000000000000000000000000000000000000000000000000000000000005",
        "version": "1",
        "digest": "EVMF5DELWDiDckUy2J5u8UyfctyFYFPrM9hdqGeVxRLq",
        "type": "0x3::iota_system::IotaSystemState",
        "owner": {
          "Shared": {
            "initial_shared_version": 1
          }
        },
        "previousTransaction": "iRCtWGJaBCVJyQ87kZZEubgBY69ZFnYXfCznyjs4Avb",
        "storageRebate": "0",
        "bcs": {
          "dataType": "moveObject",
          "type": "0x3::iota_system::IotaSystemState",
          "hasPublicTransfer": false,
          "version": 1,
          "bcsBytes": "AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAUBAAAAAAAAAA=="
        }
      }
    }
  ],
  "iota client object 0x0000000000000000000000000000000000000000000000000000000000000000",
  [
    {
      "error": {
        "code": "notExists",
        "object_id": "0x0000000000000000000000000000000000000000000000000000000000000000"
      }
    }
  ],
  "iota client tx-block Cq8LK5uVL4CXgG71iXEuDoLEXcT8AAwYQRxNWV8GEREo",
  "ErrorObject { code: InvalidParams, message: \"Could not find the referenced transaction [TransactionDigest(Cq8LK5uVL4CXgG71iXEuDoLEXcT8AAwYQRxNWV8GEREo)].\", data: None }",
  "iota client tx-block EgMTHQygMi6SRsBqrPHAEKZCNrpShXurCp9rcb9qbSg8",
  "ErrorObject { code: InvalidParams, message: \"Could not find the referenced transaction [TransactionDigest(EgMTHQygMi6SRsBqrPHAEKZCNrpShXurCp9rcb9qbSg8)].\", data: None }"
]
